# manthana

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.tls.yml  docker-compose.yml  pyproject.toml
agent/: pyproject.toml
agent/src/manthana/agent/: capture.py  cli.py  compact.py  config.py  insights.py  mcp_server.py  optimize.py  purge.py  release.py  sync_client.py  updatecheck.py  watcher.py
agent/src/manthana/agent/actions/: __init__.py  auto_tag.py  base.py  dispatcher.py  loop_warning.py  loops.py  prior_work.py
agent/src/manthana/agent/compactor/: __init__.py  compactor.py  prompt.py
agent/src/manthana/agent/cost/: cost.py
agent/src/manthana/agent/dashboard/: __init__.py  app.py
agent/src/manthana/agent/llm/: provider.py
agent/src/manthana/agent/redaction/: __init__.py  patterns.py  redactor.py
agent/src/manthana/agent/skillminer/: __init__.py  cluster.py  embed.py  miner.py  provenance.py  skillmd.py  synthesize.py
agent/src/manthana/agent/store/: migrations.py  store.py  tables.py
collectors/: pyproject.toml
collectors/src/manthana/collectors/: __init__.py  base.py  claude_code.py  codex.py  sessionize.py
deploy/: Caddyfile  Caddyfile.docker  aws-add-web-container.sh
docs/: DEMO.md  README.md  aws-infrastructure.md  deploy.md  onboarding.md  troubleshooting.md
docs-site/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json
schemas/: pyproject.toml
scripts/: demo_team.sh  install.sh  quickstart_demo.sh  serve.sh  tailscale_serve.sh
server/: Dockerfile  pyproject.toml
server/src/manthana/server/: __init__.py  app.py  ask.py  auth.py  cli.py  config.py  consolidate.py  db.py  deploy_templates.py  digest.py  founder.py  founder_mcp.py  graph.py  hardening.py  llm.py  metering.py  mining.py  overview.py  pages.py  purge.py  storage.py  store.py  tables.py  teach.py  ui.py  vectors.py  wiki_api.py  wiki_ui.py
server/src/manthana/server/analyzer/: __init__.py  router.py
server/src/manthana/server/enrich/: __init__.py  coerce.py  compare.py  enricher.py  prompt.py
skills/: pyproject.toml
spec/: manthana-architecture.md  manthana-context-graph.md  manthana-decisions.md  manthana-founder-mcp.md  manthana-knowledge-consolidation.md  manthana-org-wiki.md
tests/: test_actions.py  test_agent_config.py  test_ask_notes.py  test_ask_people.py  test_assembly.py  test_automation.py  test_codex_collector.py  test_compact_summary.py  test_compactor.py  test_consolidate.py  test_cost.py  test_dashboard.py  test_digest.py  test_drill_mcp.py  test_engineer_console.py  test_enrichment.py  test_enrichment_compare.py  test_founder_auth.py  test_founder_mcp.py  test_graph.py  test_hardening.py  test_insights.py  test_knowledge_edges.py  test_knowledge_store.py  test_metering.py  test_mining_bounds.py  test_onboard_org.py  test_onboarding.py  test_optimize.py  test_personal_wiki.py  test_pressure_fixes.py  test_privacy_and_sessions_ui.py  test_project_overview.py  test_projections.py  test_purge.py  (+23 more)
(+97 files in other folders)
