[project]
name = "manthana"
version = "0.6.3"
description = "Manthana local agent + CLI — local-first capture of AI coding interactions."
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "manthana-schemas==0.6.3",
    "manthana-collectors==0.6.3",
    "manthana-skills==0.6.3",
    "typer>=0.12",
    "sqlmodel>=0.0.22",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
]

[project.optional-dependencies]
# Local vector store (sqlite-vec). Wired but optional; vector features are added
# in a later phase. Install with: uv sync --extra vec
vec = ["sqlite-vec>=0.1.3"]
# Skill-miner semantic embeddings (bge-large). Lives on manthana-skills; install
# with: uv sync --extra embeddings  (heavy: torch).
embeddings = ["manthana-skills[embeddings]"]
# headroom context-compression integration (`manthana optimize`). Optional; the
# wrapper degrades to an install hint when absent. Install: uv sync --extra optimize.
optimize = ["headroom-ai[proxy,mcp]>=0.26"]
# Expose Manthana's read-only query tools to Claude Code over MCP (`manthana mcp`).
# Optional; degrades to an install hint when absent. Install: uv sync --extra mcp.
mcp = ["mcp>=1.0"]

[project.scripts]
manthana = "manthana.agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/manthana"]
