[project]
name = "manthana-collectors"
version = "0.5.2"
description = "Manthana collectors — per-surface adapters that normalize transcripts to Turns."
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = ["manthana-schemas==0.5.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/manthana"]
