[project]
name = "manthana-server"
version = "0.6.5"
description = "Manthana org server — ingestion, multi-tenancy, k-anonymity, founder query (AGPL-3.0)."
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
dependencies = [
    "manthana-schemas==0.6.5",
    "manthana-skills==0.6.5",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "python-multipart>=0.0.9",
    "sqlmodel>=0.0.22",
    "pyjwt>=2.9",
    "typer>=0.12",
]

[project.optional-dependencies]
# Production drivers; dev/tests run on SQLite + the in-memory object store.
postgres = ["psycopg[binary]>=3.2", "pgvector>=0.3"]
s3 = ["boto3>=1.35"]
# Real founder-narrative provider; dev/tests use the deterministic mock.
llm = ["anthropic>=0.40"]
# Founder MCP gateway — Claude Code connects over MCP/HTTP (spec: manthana-founder-mcp).
# Optional; the gateway degrades to an install hint when absent.
mcp = ["mcp>=1.0"]

[project.scripts]
manthana-server = "manthana.server.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/manthana"]
